(fix) Alignment of healthbar for iphonex users.

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -375,7 +375,7 @@ hr {
 
 #health-container {
   position: absolute;
-  top: 48vh;
+  top: 52.5vh;
   margin-left:10vw;
   margin-top: 6vw;
   row-gap: 20px;
